# website

./: .gitignore  LICENSE  README.md  requirements.txt  setup.sh
apps/cf-publish/flet/: README.md  deploy_core.py  main.py  pyproject.toml  requirements.txt
apps/cf-publish/pypi/: README.md  pyproject.toml
apps/cf-publish/rust/: Cargo.toml  README.md
apps/cf-publish/rust/src/: main.rs  pages.rs
apps/debian-migrate/: .gitignore  CHANGELOG.md  DESIGN_WALKTHROUGH.md  Makefile  README.md  pyproject.toml
apps/debian-migrate/src/debian_migrate/: __init__.py  __main__.py  app.py  main.py  state.py  theme.py
apps/debian-migrate/tests/: test_export.py  test_post_install.py  test_replacements.py  test_scanners.py  test_state.py
vegitage-data/: README.md  pyproject.toml
vegitage-data/data/: extracted_varieties.csv
vegitage-data/data/deep_research/italian/: _categories.yaml
vegitage-data/data/deep_research/イタリア野菜/: そば.md  アグレッティ.md  アスパラガス.md  アーティチョーク.md  イタリアンパセリ.md  イチジク.md  インゲン.md  エルダーフラワー.md  エンダイブ.md  エンドウマメ.md  オリーブ.md  オレガノ・マジョラム.md  オレンジ.md  カッペリ.md  カブとチーマ・ディ・ラーパ.md  カボチャ.md  カリフラワー.md  カルドン.md  カーボロネロ、ケール.md  キュウリ.md  クレソン.md  コールラビ.md  サヤインゲン.md  サルシフィ.md  ストリドーロ.md  ズッキーニ.md  セルリアック.md  セロリ.md  セージ.md  ソラマメ.md  タンポポ.md  チコリー緑及び白.md  チコリー（プンタレッレ）.md  チコリー（ラディッキオ）.md  トウモロコシ.md  トマト.md  ナス.md  ニンニク.md  バジル.md  パースニップ.md  (+28 more)
vegitage-data/data/master_lists/: italian_recipes.csv  italian_vegetables.csv  items.csv  japanese_recipes.csv  japanese_vegetables.csv  seed_sources.md
vegitage-data/data/recipes/: pizza_margherita_IT-RCP-PIZ-001.json
vegitage-data/data/vegetables/tomato/: san_marzano_tomato_IT-VEG-TOM-001.json
vegitage-data/docs/: 伝統野菜料理辞典_計画書v2.docx  伝統野菜料理辞典_計画書v2.md  伝統野菜料理辞典_計画書v3.md
vegitage-data/drafts/claude/raw/: IT-RCP-PIZ-001_recipe_raw.json
vegitage-data/drafts/claude/recipes/: margherita_pizza_IT-RCP-PIZ-001.json  pizza_margherita_IT-RCP-PIZ-001_1.json  unknown_IT-RCP-PIZ-001.json
vegitage-data/drafts/gemini/recipes/: pizza_margherita_IT-RCP-PIZ-001.json
vegitage-data/scripts/: build.py  convert_to_web.py  extract_varieties.py  gen_cuisine.py  gen_cultivation.py
vegitage-data/src/agents/: batch_runner.py  gemini_agent.py  pdf_converter.py  research_agent.py  research_agent_prototype.py  research_min.py
vegitage-data/src/schemas/: recipe.py  vegetable.py
vegitage-data/src/tools/: extract_varieties.py  extract_varieties_claude.py  gen_icons.py
vegitage-data/src/validators/: validate_data.py
vegitage-data/static/: style.css
vegitage-data/web/: README.md  build.py  deploy.sh
vegitage-data/web/italian/: そば.md  アグレッティ.md  アーティチョーク.md  イタリアンパセリ.md  イチジク.md  エルダーフラワー.md  エンドウマメ.md  オリーブ.md  オレンジ.md  カブとチーマ・ディ・ラーパ.md  カボチャ.md  カリフラワー.md  カルドン.md  カーボロネロ、ケール.md  クレソン.md  コールラビ.md  サヤインゲン.md  ズッキーニ.md  セルリアック.md  セロリ.md  セージ.md  タンポポ.md  チコリー.md  チコリー緑及び白.md  チコリー（ラディッキオ）.md  トウモロコシ.md  トマト.md  ナス.md  バジル.md  ビーツ.md  ピーマン.md  フェンネル.md  フダンソウ.md  ブドウ.md  ヘーゼルナッツ.md  ホウレンソウ.md  ボリジ.md  ポロとチポッロット.md  メロン.md  ルッコラ.md  (+8 more)
vegitage-data/web/italian/cuisine/: アグレッティ.md  アスパラガス.md  アーティチョーク.md  イタリアンパセリ.md  インゲン.md  エルダーフラワー.md  エンドウマメ.md  オリーブ.md  カッペリ.md  カリフラワー.md  カルドン.md  カーボロネロ、ケール.md  キュウリ.md  クレソン.md  (+32 more)
vegitage-data/web/static/: style.css
(+1552 files in other folders)
