[project]
name = "vegitage-data"
version = "0.1.0"
description = "伝統野菜・料理辞典 マルチAIリサーチシステム"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

dependencies = [
    "claude-code-sdk>=0.0.25",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vegitage-research = "src.agents.research_agent:main_cli"
vegitage-research-gemini = "src.agents.gemini_agent:main_cli"
vegitage-validate = "src.validators.validate_data:main_cli"
vegitage-batch = "src.agents.batch_runner:main_cli"
vegitage-pdf2json = "src.agents.pdf_converter:main_cli"
