[project]
name = "debian-migrate"
version = "0.1.0"
description = "Debian 移行ウィザード — Windows / macOS / Linux のデスクトップアプリ"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "aiseed.dev" },
]
dependencies = [
    "flet[all]>=0.85.0,<0.90",
    "psutil>=5.9",
]

[project.scripts]
debian-migrate = "debian_migrate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debian_migrate"]

[tool.flet]
# `flet build` configuration
org = "dev.aiseed"
product = "Debian Migrate"
company = "aiseed.dev"
copyright = "Copyright (c) 2026 aiseed.dev"

[tool.flet.app]
path = "src/debian_migrate"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
