[project]
name = "cf-publish-flet"
version = "0.1.0"
description = "No-terminal GUI to publish a folder to Cloudflare Pages (Flet)"
requires-python = ">=3.11"
dependencies = [
    "flet[all]>=0.80,<0.86",
    "httpx>=0.27",
    "blake3>=0.4",
]

# Used by `flet build` / `flet run`.
[tool.flet]
product = "cf-publish"
org = "dev.aiseed"
company = "aiseed"
