[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-publish"
version = "0.1.0"
description = "Deploy a local folder to Cloudflare Pages via the Direct Upload API — no wrangler, no npm."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "blake3>=0.4"]

[project.scripts]
cf-publish = "cf_publish.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_publish"]
