[package]
name = "cf-publish"
version = "0.1.0"
edition = "2021"
description = "Deploy a local folder to Cloudflare Pages via the Direct Upload API (no npm/wrangler)."

[[bin]]
name = "cf-publish"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
base64 = "0.22"
mime_guess = "2.0"
anyhow = "1.0"
walkdir = "2.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
